--- a/values.yaml
+++ b/values.yaml
@@ -628,7 +628,7 @@ vmagent:
 #################################################
 # Grafana dependency chart configuration. For possible values refer to https://github.com/grafana/helm-charts/tree/main/charts/grafana#configuration
 grafana:
-  enabled: true
+  enabled: false
   ## all values for grafana helm chart can be specified here
   sidecar:
     datasources:
